# vane

./: .gitignore  CLAUDE.md  NOTICE  README.md  package.json
.claude/: launch.json
examples/demo/: README.md  index.html  package.json  vite.config.ts
examples/demo/src/: charts.ts  main.ts
pipeline/: Dockerfile  README.md  SOURCES.md  VARIABLES.md  pyproject.toml
pipeline/src/vane_pipeline/: __init__.py  cli.py  jobs.py  publish.py  storage.py
pipeline/tests/: test_publish.py
spec/: design-notes.md  vane-container.md  vane-metadata.md
