[project]
name = "vane-pipeline"
version = "0.0.1"
description = "Reference pipeline: fetch open weather data, convert to .vane, publish immutably with a latest.json pointer"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "vane-tools",
    "boto3>=1.36",  # request_checksum_calculation config requires >= 1.36
    "apscheduler>=3.10",
]

[project.scripts]
vane-pipeline = "vane_pipeline.cli:main"

[tool.uv.sources]
vane-tools = { path = "../packages/vane-tools", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vane_pipeline"]

[dependency-groups]
dev = ["pytest>=8"]
